--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
@@ -77,6 +77,8 @@
     <ClCompile Include="ScenePuzzleTemplate.cpp" />
     <ClCompile Include="SceneRoomTemplate.cpp" />
     <ClCompile Include="SceneTemplate.cpp" />
+    <ClCompile Include="SlowRotateComponent.cpp" />
+    <ClCompile Include="StrongBoxPuzzle.cpp" />
     <ClCompile Include="TeaCupPuzzleScene.cpp" />
     <ClCompile Include="TelePuzzleScene.cpp" />
     <ClCompile Include="TiledAreaComponent.cpp" />
@@ -265,6 +267,8 @@
     <ClInclude Include="ScenePuzzleTemplate.h" />
     <ClInclude Include="SceneRoomTemplate.h" />
     <ClInclude Include="SceneTemplate.h" />
+    <ClInclude Include="SlowRotateComponent.h" />
+    <ClInclude Include="StrongBoxPuzzle.h" />
     <ClInclude Include="TeaCupPuzzleScene.h" />
     <ClInclude Include="TelePuzzleScene.h" />
     <ClInclude Include="TextInfo.h" />
